# solar

./: Cargo.toml  README.md  crates.js  index.html  index.md  search-index.js  settings.html  source-files.js  test.txt
.github/workflows/: build.yaml  coverage.yaml  docs.yaml  rust.yml  style.yaml  tests.yaml
implementors/core/clone/: trait.Clone.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
solar/: all.html  constant.PI.html  constant.SOLAR_CONSTANT.html  enum.SkyUnits.html  enum.Time.html  fn.air_mass.html  fn.in_degrees.html  fn.in_radians.html  index.html  sidebar-items.js  struct.PerezSky.html  struct.ReinhartSky.html  struct.Solar.html  type.Float.html
solar/perez/: constant.WHTEFFICACY.html  enum.SkyUnits.html  fn.read_colour_matrix.html  index.html  sidebar-items.js  struct.PerezSky.html
solar/reinhart_sky/: constant.TNAZ.html  fn.bins_in_row.html  fn.cone_solid_angle.html  fn.patch_solid_angle.html  fn.row_height.html  index.html  sidebar-items.js  struct.ReinhartSky.html
src/: lib.rs  perez.rs  reinhart_sky.rs
src/solar/: lib.rs.html  perez.rs.html  reinhart_sky.rs.html
