[package]
name = "solar"
version = "0.1.0"
authors = ["germolinal <germolinal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geometry3d = { git = "https://github.com/SIMPLE-BuildingSimulation/geometry3d.git" }
# geometry3d = {path="../geometry3d"}
calendar = { git = "https://github.com/SIMPLE-BuildingSimulation/calendar.git" }
matrix = { git = "https://github.com/SIMPLE-BuildingSimulation/matrix.git" }
weather = {git = "https://github.com/SIMPLE-BuildingSimulation/weather.git" }

[dev-dependencies]


[features]
default = []
float = ["weather/float", "geometry3d/float", "calendar/float", "matrix/float"]